--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,11 @@ default: &default
 development:
   <<: *default
   database: product_management_development
+  # by Danilo: the host used in the development environment
+  host: localhost
+  # by Danilo: username and password
+  username: postgres
+  password: 123456
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
