--- a/config/database.yml
+++ b/config/database.yml
@@ -63,6 +63,11 @@ development:
 test:
   <<: *default
   database: product_management_test
+  # by Danilo: the host used during the tests used with rspec
+  host: localhost
+  # by Danilo: username and password
+  username: postgres
+  password: 123456
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
